--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
+h1.ce-header {
+  @apply text-4xl font-bold;
+}
+h2.ce-header {
+  @apply text-3xl font-semibold;
+}
+h3.ce-header {
+  @apply text-2xl font-semibold;
+}
+h4.ce-header {
+  @apply text-xl font-semibold;
+}
+h5.ce-header {
+  @apply text-lg font-semibold;
+}
+h6.ce-header {
+  @apply text-base font-semibold;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -80,4 +99,4 @@
   font-size: 0.93rem !important;
 }
 
-@import "~@uploadthing/react/styles.css"
+@import "~@uploadthing/react/styles.css";
